# sync-r2

./: .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md  syncr2.toml
config/: default.toml
src/: cli.rs  config.rs  core.rs  db.rs  events.rs  files.rs  lib.rs  main.rs  r2.rs  state.rs  tui.rs
